# Spending-tracker

./: .env.example  .gitignore  DDL.sql  Makefile  README.md  docker-compose.yaml  init_database.py  logic.drawio  pyproject.toml  spending.csv
Finance_builder101/: logic.py  spending.csv
frontend/: package-lock.json
frontend/src/: App.js  index.css
spending_tracker/: app.py  config.py  db.py  helpers.py  main.py  validators.py
spending_tracker/static/: styles.css
spending_tracker/templates/: index.html
tests/: test_app.py  test_main.py
